health-check/src/main/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: springboot-health-check
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: springboot-health-check
